--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,2 @@
 110:  print("Replied to parameter of comment referencing kelman.") TO_FIX---> print("Replied to unknown parameter of comment referencing kelman.")
+69-71: def set_praise TO_FIX---> Remove
